app/client/game.css
.gameContainer{
  display:flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
}

.statusList{
  position: relative;
  height:100%;
  width: 30vw;
  background: #513F31;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  color:white;
}

.statusPanel{
  transform: translateY(100px);
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  opacity: 0;

}

.statusPanelShow{
  transform: translateY(0vw);
  transition: all 1s;
  opacity: 1;

}



.gamingArea{
  position: relative;
  height:100%;
  width:70vw;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #513F31;

  perspective-origin:center center;
  -moz-perspective-origin:center center;
  -webkit-perspective-origin:center center;
  perspective:0px;
  -moz-perspective:0px;
  -webkit-perspective:0px;
}

.gamingArea .canvas{
  width:100%;
  height: 100%;
  background: white;
  transform-style:3d;
  -moz-transform-style:3d;
  -webkit-transform-style:3d;
  background-image: url("/img/game/background.svg");
  background-size: 100px 100px;
}

.land{
  position: relative;
  top:30%;
  float: none;
  margin-left: auto;
  margin-right: auto;
  width:350px;
  height:350px;
  transform:rotateX(55deg) rotateZ(45deg);
  -moz-transform:rotateX(55deg) rotateZ(45deg);
  -webkit-transform:rotateX(55deg) rotateZ(45deg);

}
.land div{

  position: relative;
  display: inline-block;
  /*width:100px;
  height: 100px;
  background: gray;*/
  /*background-image: url("/img/game/land.svg");*/

}

.land div:hover{

  border:1px black solid;
  /*background-image: url("/img/game/land.svg");*/

}

.land div img{
  height: 100%;
  width: 100%;

 /*-webkit-transform :rotateX(20deg) rotateY(45deg) rotateZ(130deg);*/
}

.landObject{
  position: absolute;
  top:0px;
  left:0px;
  z-index: 100;
  perspective-origin:center center;
  -moz-perspective-origin:center center;
  -webkit-perspective-origin:center center;
  perspective:0px;
  -moz-perspective:0px;
  -webkit-perspective:0px;

  transform-style:3d;
  -moz-transform-style:3d;
  -webkit-transform-style:3d;
}

.farmObject{
  transform:rotateX(55deg) rotateZ(45deg);
  -moz-transform:rotateX(55deg) rotateZ(45deg);
  -webkit-transform:rotateX(55deg) rotateZ(45deg);
}

.selectedLandObject{
  transform:rotateX(55deg) rotateZ(45deg);
  -moz-transform:rotateX(55deg) rotateZ(45deg);
  -webkit-transform:rotateX(55deg) rotateZ(45deg);
}


.cropObject{
  position: absolute;
  width:150px;
  height:150px;
  top:200px;
  left:200px;
  cursor: pointer;
}

.cropObject img{
  height: 100%;
  width: 100%;
}


.crop{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.crop *{
  margin-left: 20px;
}

.crop img{
  width:50px;
  height:50px;
}

.farm{
  width:150px;
  height:150px;
}

.plantButton{
  transition: all 1s;
}

.summaryBoard{


}

.logo{
  position: absolute;
  width: 25vw;
  height: 10vh;
  z-index: 20000;
  /*background: rgba(0,0,0,0.5);*/
  border: 1px solid black;
  right: 0px;
  color:white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-y: scroll;
}

.logo img{
  width: 100%;
  height: 100%;
}

.summaryBoard div{
  margin-bottom: 10px;
}

.cropTable{
  top:50px;
}

.summaryBoard h2{
  position: absolute;
  top:20px;
}

.property_shop{
  position:absolute;
  z-index: 6;
  height:80vh;
  width:30vw;
  margin-top:50px;
  background-color:#337ab7;
  display:none;
  text-align:center;
}

.shop_content{
  text-align:center;
  margin-top:10px;
  margin-left:120px;
}

.property_shop_table{
    border: 1px solid black;
}

.expProgress{
  position: relative;
  width: 100px;
  height: 20px;

  background-color: grey;
  color:black;
  text-align: center;
}

.expProgressBar{
  position: absolute;
  left:0px;
  width: 0%;
  height: 100%;
  background-color: #BBFF00;
  transition: all 1s;


}

.expText{
  position: relative;
  top:0px;
  left:0px;
  float:none;
  margin-left: auto;
  margin-right: auto;
}


.staProgress{
  position: relative;
  width: 100px;
  height: 20px;

  background-color: grey;
  color:black;
  text-align: center;
}

.staProgressBar{
  position: absolute;
  left:0px;
  width: 0%;
  height: 100%;
  background-color: #BBFF00;
  transition: all 1s;


}

.staText{
  position: relative;
  top:0px;
  left:0px;
  float:none;
  margin-left: auto;
  margin-right: auto;
}

.controlButtons{
  display: flex;
  justify-content: cneter;
  align-items: center;
  flex-direction: row;
  margin-top: 100px;

}
.controlButtons *{
  margin-right: 10px;
}

.cropLand{
  display: flex;
  justify-content: cneter;
  align-items: center;
  flex-direction: row;
  margin-bottom:30px;
}

.cropLand *{
  margin-right: 10px;
}

.cropLand img{
  height:50px;
}

td{
  width:100px;
  text-align: center;
}

td img{
  width:50px;
  height:50px;
}

.characterList{
  width: 100%;
  height: 20vh;
  position: absolute;
  top: 0px;
  left: 0px;
  padding:50px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  background: rgba(0,0,0,0.2);
  z-index:5;
}

.characterImg{
  width:100px;
  height:100px;
  border-radius: 100%;
  background: #E5E5E5;
}

.characterImg img{
  width:100%;
  height:100%;
}

.characterStatus{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
  margin-left: 20px;
}

.characterStatus *{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.characterStatus h3{
  margin-bottom: 10px;
}

.characterStatus h4{
  margin-right: 5px;
}

.userExp{
  margin-bottom: 10px;
}

.functionSwitch{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.functionSwitch button{
  margin-right: 10px;
}

.musicSwitch{
  width:40px;
  height:40px;
  border-radius: 100%;
  background: #E5E5E5;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all .2s;
}

.musicSwitch:hover{
  background: rgba(255,255,255,0.3);
}

.musicSwitch img{
  width:80%;
  height: 80%;
}

.croppedObject{
  cursor: pointer;
}

.animationObject{
  -webkit-transition: opacity 1s,  -webkit-transform 1s; /* Safari */

  transition:  opacity 1s, transform 1s;
  display: none;
  opacity: 0;
}

.animationTemp{
  width:150px;
  height:150px;
  position:absolute;
  z-index:6;

  -webkit-transition: opacity 1s,  -webkit-transform 1s; /* Safari */

  transition:  opacity 1s, transform 1s;
  -webkit-transform: translateY(0px);
  transform: translateY(0px);

  display: none;
  opacity: 0;
}

.animationTempShow{
   opacity:1;
   transform:translateY(-50px);
   -webkit-transform:translateY(-50px);
}

.animationImg img{
  width:100px;
  height: 100px;
}

.levelUpObject{
  -webkit-transition: opacity 1s,  -webkit-transform 1s; /* Safari */

  transition:  opacity 1s, transform 1s;
  display: none;
  opacity: 0;

  position:absolute;
  width:150px;
  height:150px;
  z-index:7;
}

.progressObject{
  -webkit-transition: opacity 1s,  -webkit-transform 1s; /* Safari */

  transition:  opacity 1s, transform 1s;
  display: none;
  opacity: 0;

}
.loading{
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
  background: rgba(255,255,255,0.5);
  transition: opacity 1s;
}

